Fix F&B image heights on mobile

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -210,6 +210,8 @@ body {}
         padding-top: 30px; }
     .features-benefits .carousel-inner {
         padding-bottom: 50px; }
+    .features-benefits .carousel-inner .item-img {
+        min-height: 574px; }
     .features-benefits .carousel-control img {
         padding-top: 32px; }
 @media (min-width: 768px) {
@@ -227,6 +229,8 @@ body {}
         padding-top: 40px; }
     .features-benefits .carousel {
         height: 540px; }
+    .features-benefits .carousel-inner .item-img {
+        min-height: 0; }
     .features-benefits .carousel-indicators {
         bottom: 150px; }
     .features-benefits .carousel-control img {
